# hdr-imaging-c-

./: .gitignore  CMakeLists.txt  README.md
images/Memorial_SourceImages/: time.txt
include/: hdr_imaging_interface.hpp
src/: hdr_recover_muti_exposure.cpp  hdr_recover_muti_exposure.h  main.cpp  response_solver.cpp  response_solver.h  utility.hpp
